--- a/2. Hello World/index.html
+++ b/2. Hello World/index.html
@@ -4,6 +4,8 @@
   <title></title>  
 </head>
 <body>
-  <h1></h1>
+  <h1>Hello World</h1>
+  <p>My first html lesson</p>
+  <span>PADC</span>
 </body>
 </html>
