--- a/6. Images/index.html
+++ b/6. Images/index.html
@@ -8,6 +8,19 @@
 
 <body>
 
+	<figure>
+		<picture>
+			<source srcset="https://placekitten.com/1000/800" media="(min-width: 1000px)">
+			<source srcset="https://placekitten.com/770/400" media="(min-width: 770px)">
+			<source srcset="https://placekitten.com/480/250" media="(min-width: 480px)">
+			<img src="https://placekitten.com/320/300" alt="Kitty Image"
+			srcset="https://placekitten.com/320/300,
+			https://placekitten.com/480/450 1.5x,
+			https://placekitten.com/640/600 2x">
+		</picture>
+		<figcaption>Responsive Kitty Image Here</figcaption>
+	</figure>
+	
 	
 
 
