--- a/7. Form & Table/index.html
+++ b/7. Form & Table/index.html
@@ -6,7 +6,34 @@
 </head>
 
 <body>
-	<form>
+	<form action="" method="post" autocomplete="">
+		<table>
+			<tr>
+				<td>
+					<label for="name1">Enter your name: </label>
+				</td>
+				<td>
+					<input type="text" autocomplete="" name="q" id="name1" required>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<label for="password">Enter your password: </label>
+				</td>
+				<td>
+					<input type="password" name="password" id="password" required>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<input type="submit" name="submit" value="Login!">
+		<button type="submit" name="submit" value="FBLogin">Login with FB</button>
+				</td>
+			</tr>
+		</table>
+		
+		
+		
 		
 	</form>
 	<br/><br/>
