--- a/8. Media/index.html
+++ b/8. Media/index.html
@@ -26,16 +26,21 @@
         <header>
             <h2>Video</h2>
         </header>
+        <video controls>
+            <source src="assets/video.mp4" type="video/mp4">
+                Your browser does not support the audio element. 
+        </video>
     </section>
     <section>
         <header>
             <h2>Embed by iframe</h2>
         </header>
-       
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/tPC9VID6M9s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section>
         <header>
             <h2>PDF</h2>
+            <embed src="../3. Hierarchy & Tags/html-chatsheet.pdf" width="100%" height="500px"/>
         </header>
     </section>
     <footer>Footer of Media Elements</footer>
